gen/libdwf_api.jl


function FDwfAnalogImpedanceModeGet(hdwf, mode)
    ccall((:FDwfAnalogImpedanceModeGet, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, mode)
end

function FDwfAnalogImpedanceReferenceSet(hdwf, ohms)
    ccall((:FDwfAnalogImpedanceReferenceSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, ohms)
end

function FDwfAnalogImpedanceReferenceGet(hdwf, pohms)
    ccall((:FDwfAnalogImpedanceReferenceGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, pohms)
end

function FDwfAnalogImpedanceFrequencySet(hdwf, hz)
    ccall((:FDwfAnalogImpedanceFrequencySet, libdwf), BOOL, (HDWF, Cdouble), hdwf, hz)
end

function FDwfAnalogImpedanceFrequencyGet(hdwf, phz)
    ccall((:FDwfAnalogImpedanceFrequencyGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, phz)
end

function FDwfAnalogImpedanceAmplitudeSet(hdwf, volts)
    ccall((:FDwfAnalogImpedanceAmplitudeSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, volts)
end

function FDwfAnalogImpedanceAmplitudeGet(hdwf, pvolts)
    ccall((:FDwfAnalogImpedanceAmplitudeGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, pvolts)
end

function FDwfAnalogImpedanceOffsetSet(hdwf, volts)
    ccall((:FDwfAnalogImpedanceOffsetSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, volts)
end

function FDwfAnalogImpedanceOffsetGet(hdwf, pvolts)
    ccall((:FDwfAnalogImpedanceOffsetGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, pvolts)
end

function FDwfAnalogImpedanceProbeSet(hdwf, ohmRes, faradCap)
    ccall((:FDwfAnalogImpedanceProbeSet, libdwf), BOOL, (HDWF, Cdouble, Cdouble), hdwf, ohmRes, faradCap)
end

function FDwfAnalogImpedanceProbeGet(hdwf, pohmRes, pfaradCap)
    ccall((:FDwfAnalogImpedanceProbeGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, pohmRes, pfaradCap)
end

function FDwfAnalogImpedancePeriodSet(hdwf, cMinPeriods)
    ccall((:FDwfAnalogImpedancePeriodSet, libdwf), BOOL, (HDWF, Cint), hdwf, cMinPeriods)
end

function FDwfAnalogImpedancePeriodGet(hdwf, cMinPeriods)
    ccall((:FDwfAnalogImpedancePeriodGet, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, cMinPeriods)
end

function FDwfAnalogImpedanceCompReset(hdwf)
    ccall((:FDwfAnalogImpedanceCompReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfAnalogImpedanceCompSet(hdwf, ohmOpenResistance, ohmOpenReactance, ohmShortResistance, ohmShortReactance)
    ccall((:FDwfAnalogImpedanceCompSet, libdwf), BOOL, (HDWF, Cdouble, Cdouble, Cdouble, Cdouble), hdwf, ohmOpenResistance, ohmOpenReactance, ohmShortResistance, ohmShortReactance)
end

function FDwfAnalogImpedanceCompGet(hdwf, pohmOpenResistance, pohmOpenReactance, pohmShortResistance, pohmShortReactance)
    ccall((:FDwfAnalogImpedanceCompGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, pohmOpenResistance, pohmOpenReactance, pohmShortResistance, pohmShortReactance)
end

function FDwfAnalogImpedanceConfigure(hdwf, fStart)
    ccall((:FDwfAnalogImpedanceConfigure, libdwf), BOOL, (HDWF, Cint), hdwf, fStart)
end

function FDwfAnalogImpedanceStatus(hdwf, psts)
    ccall((:FDwfAnalogImpedanceStatus, libdwf), BOOL, (HDWF, Ptr{DwfState}), hdwf, psts)
end

function FDwfAnalogImpedanceStatusInput(hdwf, idxChannel, pgain, pradian)
    ccall((:FDwfAnalogImpedanceStatusInput, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, pgain, pradian)
end

function FDwfAnalogImpedanceStatusMeasure(hdwf, measure, pvalue)
    ccall((:FDwfAnalogImpedanceStatusMeasure, libdwf), BOOL, (HDWF, DwfAnalogImpedance, Ptr{Cdouble}), hdwf, measure, pvalue)
end

function FDwfDigitalInMixedSet(hdwf, fEnable)
    ccall((:FDwfDigitalInMixedSet, libdwf), BOOL, (HDWF, BOOL), hdwf, fEnable)
end

function FDwfAnalogInTriggerSourceInfo(hdwf, pfstrigsrc)
    ccall((:FDwfAnalogInTriggerSourceInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfstrigsrc)
end

function FDwfAnalogOutTriggerSourceInfo(hdwf, idxChannel, pfstrigsrc)
    ccall((:FDwfAnalogOutTriggerSourceInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pfstrigsrc)
end

function FDwfDigitalInTriggerSourceInfo(hdwf, pfstrigsrc)
    ccall((:FDwfDigitalInTriggerSourceInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfstrigsrc)
end

function FDwfDigitalOutTriggerSourceInfo(hdwf, pfstrigsrc)
    ccall((:FDwfDigitalOutTriggerSourceInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfstrigsrc)
end

function FDwfAnalogOutEnableSet(hdwf, idxChannel, fEnable)
    ccall((:FDwfAnalogOutEnableSet, libdwf), BOOL, (HDWF, Cint, BOOL), hdwf, idxChannel, fEnable)
end

function FDwfAnalogOutEnableGet(hdwf, idxChannel, pfEnable)
    ccall((:FDwfAnalogOutEnableGet, libdwf), BOOL, (HDWF, Cint, Ptr{BOOL}), hdwf, idxChannel, pfEnable)
end

function FDwfAnalogOutFunctionInfo(hdwf, idxChannel, pfsfunc)
    ccall((:FDwfAnalogOutFunctionInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pfsfunc)
end

function FDwfAnalogOutFunctionSet(hdwf, idxChannel, func)
    ccall((:FDwfAnalogOutFunctionSet, libdwf), BOOL, (HDWF, Cint, FUNC), hdwf, idxChannel, func)
end

function FDwfAnalogOutFunctionGet(hdwf, idxChannel, pfunc)
    ccall((:FDwfAnalogOutFunctionGet, libdwf), BOOL, (HDWF, Cint, Ptr{FUNC}), hdwf, idxChannel, pfunc)
end

function FDwfAnalogOutFrequencyInfo(hdwf, idxChannel, phzMin, phzMax)
    ccall((:FDwfAnalogOutFrequencyInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, phzMin, phzMax)
end

function FDwfAnalogOutFrequencySet(hdwf, idxChannel, hzFrequency)
    ccall((:FDwfAnalogOutFrequencySet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, hzFrequency)
end

function FDwfAnalogOutFrequencyGet(hdwf, idxChannel, phzFrequency)
    ccall((:FDwfAnalogOutFrequencyGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, phzFrequency)
end

function FDwfAnalogOutAmplitudeInfo(hdwf, idxChannel, pvoltsMin, pvoltsMax)
    ccall((:FDwfAnalogOutAmplitudeInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, pvoltsMin, pvoltsMax)
end

function FDwfAnalogOutAmplitudeSet(hdwf, idxChannel, voltsAmplitude)
    ccall((:FDwfAnalogOutAmplitudeSet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, voltsAmplitude)
end

function FDwfAnalogOutAmplitudeGet(hdwf, idxChannel, pvoltsAmplitude)
    ccall((:FDwfAnalogOutAmplitudeGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, pvoltsAmplitude)
end

function FDwfAnalogOutOffsetInfo(hdwf, idxChannel, pvoltsMin, pvoltsMax)
    ccall((:FDwfAnalogOutOffsetInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, pvoltsMin, pvoltsMax)
end

function FDwfAnalogOutOffsetSet(hdwf, idxChannel, voltsOffset)
    ccall((:FDwfAnalogOutOffsetSet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, voltsOffset)
end

function FDwfAnalogOutOffsetGet(hdwf, idxChannel, pvoltsOffset)
    ccall((:FDwfAnalogOutOffsetGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, pvoltsOffset)
end

function FDwfAnalogOutSymmetryInfo(hdwf, idxChannel, ppercentageMin, ppercentageMax)
    ccall((:FDwfAnalogOutSymmetryInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, ppercentageMin, ppercentageMax)
end

function FDwfAnalogOutSymmetrySet(hdwf, idxChannel, percentageSymmetry)
    ccall((:FDwfAnalogOutSymmetrySet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, percentageSymmetry)
end

function FDwfAnalogOutSymmetryGet(hdwf, idxChannel, ppercentageSymmetry)
    ccall((:FDwfAnalogOutSymmetryGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, ppercentageSymmetry)
end

function FDwfAnalogOutPhaseInfo(hdwf, idxChannel, pdegreeMin, pdegreeMax)
    ccall((:FDwfAnalogOutPhaseInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, pdegreeMin, pdegreeMax)
end

function FDwfAnalogOutPhaseSet(hdwf, idxChannel, degreePhase)
    ccall((:FDwfAnalogOutPhaseSet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, degreePhase)
end

function FDwfAnalogOutPhaseGet(hdwf, idxChannel, pdegreePhase)
    ccall((:FDwfAnalogOutPhaseGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, pdegreePhase)
end

function FDwfAnalogOutDataInfo(hdwf, idxChannel, pnSamplesMin, pnSamplesMax)
    ccall((:FDwfAnalogOutDataInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}, Ptr{Cint}), hdwf, idxChannel, pnSamplesMin, pnSamplesMax)
end

function FDwfAnalogOutDataSet(hdwf, idxChannel, rgdData, cdData)
    ccall((:FDwfAnalogOutDataSet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Cint), hdwf, idxChannel, rgdData, cdData)
end

function FDwfAnalogOutPlayStatus(hdwf, idxChannel, cdDataFree, cdDataLost, cdDataCorrupted)
    ccall((:FDwfAnalogOutPlayStatus, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), hdwf, idxChannel, cdDataFree, cdDataLost, cdDataCorrupted)
end

function FDwfAnalogOutPlayData(hdwf, idxChannel, rgdData, cdData)
    ccall((:FDwfAnalogOutPlayData, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Cint), hdwf, idxChannel, rgdData, cdData)
end

function FDwfEnumAnalogInChannels(idxDevice, pnChannels)
    ccall((:FDwfEnumAnalogInChannels, libdwf), BOOL, (Cint, Ptr{Cint}), idxDevice, pnChannels)
end

function FDwfEnumAnalogInBufferSize(idxDevice, pnBufferSize)
    ccall((:FDwfEnumAnalogInBufferSize, libdwf), BOOL, (Cint, Ptr{Cint}), idxDevice, pnBufferSize)
end

function FDwfEnumAnalogInBits(idxDevice, pnBits)
    ccall((:FDwfEnumAnalogInBits, libdwf), BOOL, (Cint, Ptr{Cint}), idxDevice, pnBits)
end

function FDwfEnumAnalogInFrequency(idxDevice, phzFrequency)
    ccall((:FDwfEnumAnalogInFrequency, libdwf), BOOL, (Cint, Ptr{Cdouble}), idxDevice, phzFrequency)
end
